build/errors/testdata/ensure-no-return-type.q
main() {
	ensure _ > 0
}
